--- a/services/api/package.json
+++ b/services/api/package.json
@@ -27,10 +27,12 @@
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.14.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.40.0",
     "passport": "^0.7.0",
