--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && gh-pages -d out -t"
   },
   "dependencies": {
     "axios": "^1.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.400.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
