fix: audit full flow - CORS, missing deps, guest chat access, LLM fallback
- Fix CORS to allow GitHub Pages origin (kokenator19990.github.io)
- Install missing deps: tiktoken, pdf-parse
- Allow guest users to create chat sessions during ENROLLING status
- Add graceful LLM fallback in generateResponse (try-catch)
- Fix enrollment question to use bank when LLM unavailable
- Tested 3 rounds: health, register, login, guest, profile, enrollment, chat, cleanup all pass

--- a/services/api/package.json
+++ b/services/api/package.json
@@ -39,9 +39,11 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.4.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
+    "tiktoken": "^1.0.22",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
