feat: switch to Groq LLM, add start.ps1 and QUICKSTART.md
- Switch LLM from Ollama to Groq (llama-3.3-70b-versatile, free)
- Disable embeddings (keyword fallback active, no API key needed)
- Keep Ollama config as commented fallback option
- Add start.ps1: one-command startup (Docker + API)
- Add QUICKSTART.md: setup guide and architecture overview
- Add .env.example with all options documented

--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -1,13 +1,32 @@
-DATABASE_URL=postgresql://deadbot:deadbot_dev_2024@localhost:5432/deadbot
-REDIS_URL=redis://localhost:6379
-JWT_SECRET=deadbot-dev-secret-change-in-production
-JWT_EXPIRY=7d
-MINIO_ENDPOINT=localhost
+DATABASE_URL="postgresql://deadbot:deadbot_dev_2024@localhost:5432/deadbot"
+REDIS_URL="redis://localhost:6379"
+JWT_SECRET="change-this-in-production"
+JWT_EXPIRY="7d"
+MINIO_ENDPOINT="localhost"
 MINIO_PORT=9000
-MINIO_ACCESS_KEY=deadbot
-MINIO_SECRET_KEY=deadbot_dev_2024
-MINIO_USE_SSL=false
-LLM_BASE_URL=http://localhost:11434/v1
-LLM_API_KEY=ollama
-LLM_MODEL=llama3
+MINIO_ACCESS_KEY="deadbot"
+MINIO_SECRET_KEY="deadbot_dev_2024"
+MINIO_USE_SSL="false"
+
+# ─── LLM Provider ─────────────────────────────────────────────────────────────
+# Opción A: Groq (recomendado - gratis en https://console.groq.com)
+LLM_BASE_URL="https://api.groq.com/openai/v1"
+LLM_API_KEY="gsk_tu_api_key_aqui"
+LLM_MODEL="llama-3.3-70b-versatile"
+
+# Opción B: OpenAI
+# LLM_BASE_URL="https://api.openai.com/v1"
+# LLM_API_KEY="sk-tu_api_key_aqui"
+# LLM_MODEL="gpt-4o-mini"
+
+# Opción C: Ollama local (sin internet)
+# LLM_BASE_URL="http://localhost:11434/v1"
+# LLM_API_KEY="ollama"
+# LLM_MODEL="llama3"
+
+# ─── Embeddings (opcional) ────────────────────────────────────────────────────
+# false = keyword fallback (funciona sin API key)
+# true = búsqueda semántica real (requiere OpenAI key en LLM_API_KEY)
+EMBEDDINGS_ENABLED="false"
+
 PORT=3001
